[gd_scene load_steps=18 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/SettingsHUD/SettingsHUD.gd" type="Script" id=2]
[ext_resource path="res://graphics/custom_ui/toggle_off_disabled.png" type="Texture" id=3]
[ext_resource path="res://graphics/custom_ui/toggle_on.png" type="Texture" id=4]
[ext_resource path="res://graphics/custom_ui/toggle_off.png" type="Texture" id=5]
[ext_resource path="res://graphics/custom_ui/toggle_on_disabled.png" type="Texture" id=6]
[ext_resource path="res://graphics/custom_ui/checkbutton_focus.png" type="Texture" id=7]

[sub_resource type="Theme" id=8]
CheckButton/icons/off = ExtResource( 5 )
CheckButton/icons/off_disabled = ExtResource( 3 )
CheckButton/icons/on = ExtResource( 4 )
CheckButton/icons/on_disabled = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
size = 46
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 96, 48 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 96, 48 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 46
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 26
font_data = ExtResource( 1 )

[node name="SettingsHUD" type="CanvasLayer"]
layer = 2
script = ExtResource( 2 )

[node name="HUD_Container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainSettings" type="PopupDialog" parent="HUD_Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -235.0
margin_right = 160.0
margin_bottom = 235.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="HUD_Container/MainSettings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -142.5
margin_top = 20.0
margin_right = 142.5
margin_bottom = 350.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD_Container/MainSettings/ScrollContainer"]
margin_right = 285.0
margin_bottom = 288.0
custom_constants/separation = 16

[node name="SoundContainer" type="HBoxContainer" parent="HUD_Container/MainSettings/ScrollContainer/VBoxContainer"]
margin_right = 285.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="HUD_Container/MainSettings/ScrollContainer/VBoxContainer/SoundContainer"]
margin_right = 173.0
margin_bottom = 56.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
text = "Sound"

[node name="CheckButton" type="CheckButton" parent="HUD_Container/MainSettings/ScrollContainer/VBoxContainer/SoundContainer"]
margin_left = 177.0
margin_right = 285.0
margin_bottom = 56.0
custom_styles/focus = SubResource( 11 )
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXShiftContainer" type="HBoxContainer" parent="HUD_Container/MainSettings/ScrollContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 285.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="HUD_Container/MainSettings/ScrollContainer/VBoxContainer/SFXShiftContainer"]
margin_top = 8.0
margin_right = 173.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 10 )
text = "Pitch Shift"

[node name="CheckButton" type="CheckButton" parent="HUD_Container/MainSettings/ScrollContainer/VBoxContainer/SFXShiftContainer"]
margin_left = 177.0
margin_right = 285.0
margin_bottom = 56.0
custom_styles/focus = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorButton" type="Button" parent="HUD_Container/MainSettings/ScrollContainer/VBoxContainer"]
margin_left = 13.0
margin_top = 144.0
margin_right = 271.0
margin_bottom = 208.0
rect_min_size = Vector2( 258, 64 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "BG Color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdvButton" type="Button" parent="HUD_Container/MainSettings/ScrollContainer/VBoxContainer"]
margin_left = 13.0
margin_top = 224.0
margin_right = 271.0
margin_bottom = 288.0
rect_min_size = Vector2( 258, 64 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 7 )
text = "Advanced"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="HUD_Container/MainSettings"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -84.0
margin_right = 129.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 3 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="HUD_Container/MainSettings"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -115.0
margin_right = 120.0
margin_bottom = -90.0
custom_fonts/font = SubResource( 5 )
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorSettings" type="PopupDialog" parent="HUD_Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -315.0
margin_right = 190.0
margin_bottom = 315.0
rect_min_size = Vector2( 0, 630 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="HUD_Container/ColorSettings"]
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
presets_enabled = false
presets_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="HUD_Container/ColorSettings"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -80.0
margin_right = 129.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 6 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefaultButton" type="Button" parent="HUD_Container/ColorSettings"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -160.0
margin_right = 129.0
margin_bottom = -96.0
custom_fonts/font = SubResource( 6 )
text = "Default"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdvSettings" type="PopupDialog" parent="HUD_Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -235.0
margin_right = 160.0
margin_bottom = 235.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="HUD_Container/AdvSettings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -142.5
margin_top = 20.0
margin_right = 142.5
margin_bottom = 350.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD_Container/AdvSettings/ScrollContainer"]
margin_right = 285.0
margin_bottom = 56.0
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="InterpContainer" type="HBoxContainer" parent="HUD_Container/AdvSettings/ScrollContainer/VBoxContainer"]
margin_right = 285.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="HUD_Container/AdvSettings/ScrollContainer/VBoxContainer/InterpContainer"]
margin_top = 11.0
margin_right = 173.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 13 )
text = "Interpolation"
clip_text = true

[node name="CheckButton" type="CheckButton" parent="HUD_Container/AdvSettings/ScrollContainer/VBoxContainer/InterpContainer"]
margin_left = 177.0
margin_right = 285.0
margin_bottom = 56.0
custom_styles/focus = SubResource( 11 )
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="HUD_Container/AdvSettings"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -84.0
margin_right = 129.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="HUD_Container/MainSettings/ScrollContainer/VBoxContainer/SoundContainer/CheckButton" to="." method="_on_MuteButton_toggled"]
[connection signal="toggled" from="HUD_Container/MainSettings/ScrollContainer/VBoxContainer/SFXShiftContainer/CheckButton" to="." method="_on_SFXShiftButton_toggled"]
[connection signal="pressed" from="HUD_Container/MainSettings/ScrollContainer/VBoxContainer/ColorButton" to="." method="_on_ColorButton_pressed"]
[connection signal="pressed" from="HUD_Container/MainSettings/ScrollContainer/VBoxContainer/AdvButton" to="." method="_on_AdvButton_pressed"]
[connection signal="pressed" from="HUD_Container/MainSettings/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="color_changed" from="HUD_Container/ColorSettings/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="pressed" from="HUD_Container/ColorSettings/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="HUD_Container/ColorSettings/DefaultButton" to="." method="_on_DefaultButton_pressed"]
[connection signal="toggled" from="HUD_Container/AdvSettings/ScrollContainer/VBoxContainer/InterpContainer/CheckButton" to="." method="_on_InterpButton_toggled"]
[connection signal="pressed" from="HUD_Container/AdvSettings/BackButton" to="." method="_on_BackButton_pressed"]
